# Magnetic-Levitation-Automation-System

./: .gitignore  README.md  pyproject.toml
control/: __init__.py  autotune.py  digital_twin.py  filters.py  pid.py
control/rl/: __init__.py  q_learning.py
data/: sample_results.csv
docs/: architecture.md  control_strategy.md  maglev_theory.md
hardware/: arduino_maglev.ino  raspberry_pi_interface.py
simulations/: __init__.py  model.py  runner.py  visualization.py
tests/: test_autotune.py  test_filters.py  test_model.py  test_pid.py  test_runner.py
