[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetic-levitation-automation-system"
version = "0.1.0"
description = "Simulation and control toolkit for a magnetic levitation automation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
